2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&transform): Fix an incredible bug which was
	breaking the if/endif system.
	($ELSE_PATTERN): Admit an optional argument.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* comp-vars.am: Remove, merged into...
	* compile.am: here.
	* automake.in (&get_object_extension): Adjust.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* remake.am: Merge into...
	* configure.am: ... here.
	* automake.in (&handle_configure): Adjust.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&output_lex_build_rule): Output this...
	* lex.am: New file.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&condition_negate): New.
	(&variable_conditions_permutations): Use it.
	(&read_am_file, &file_contents): Use it on `else' clauses to
	support `if FALSE'.
	(&output_yacc_build_rule): Output this...
	* yacc.am: New file.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&make_paragraphs): Transform TOPDIR_P and TOPDIR.
	(&handle_dist): Don't.
	(&handle_clean): Don't handle config.status here, let...
	* clean.am: ... do it.
	* distdir.am: Adjust.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in: Use strict vars and subs.
	Declare `%require_file_found'.
	(&handle_source_transform, &make_paragraphs): Declare my variables.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* data.am, header.am, java.am, libs.am, lisp.am, ltlib.am,
	* progs.am, python.am: Use if/endif instead of ?INSTALL?.
	* java.am (_am_installdirs): Be sure to set it.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&make_condition): Return '#' when FALSE.
	(&conditional_string): Return FALSE, not '#' in the corresponding
	cases.
	(&file_contents_internal): Adjust.
	(&check_variable_defined_unconditional): Dump the guilty variable.

2001-04-09  Akim Demaille  <akim@epita.fr>

	* distdir.am: Use and abuse of if/endif.
	* scripts.am: Using if/endif with variables is fine.

2001-04-09  Akim Demaille  <akim@epita.fr>
