@@ -16,6 +16,31 @@
 ## Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA
 ## 02111-1307, USA.
 
+
+## ---------- ##
+## ansi2knr.  ##
+## ---------- ##
+
+if %!ANSI2KNR-DIR%
+
+ansi2knr: ansi2knr.$(OBJEXT)
+	$(LINK) ansi2knr.$(OBJEXT) $(LIBS)
+ansi2knr.$(OBJEXT): $(CONFIG_HEADER)
+
+else %!ANSI2KNR-DIR%
+
+%ANSI2KNR-DIR%/ansi2knr:
+	cd %ANSI2KNR-DIR% && $(MAKE) $(AM_MAKEFLAGS) ansi2knr
+
+endif %!ANSI2KNR-DIR%
+
+
+## ------------------- ##
+## Cleaning ansi2knr.  ##
+## ------------------- ##
+
+
+if %!ANSI2KNR-DIR%
 .PHONY: clean-krextra
 
 clean-am: clean-krextra
@@ -27,3 +52,16 @@ clean-krextra:
 ## should remove it (and if the maintainer built it, then
 ## maintainer-clean should remove it).
 	-rm -f ansi2knr
+endif %!ANSI2KNR-DIR%
+
+
+
+## --------------------------------- ##
+## Cleaning the output of ansi2knr.  ##
+## --------------------------------- ##
+
+.PHONY: mostlyclean-kr
+
+mostlyclean-am: mostlyclean-kr
+mostlyclean-kr:
+	-rm -f *_.c
