@@ -1,5 +1,11 @@
 2001-04-09  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&get_object_extension): Use ansi2knr.am.
+	* clean-kr.am, kr-extra.am: Remove, merged into...
+	* ansi2knr.am: this new file.
+
+2001-04-09  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&transform): Fix an incredible bug which was
 	breaking the if/endif system.
 	($ELSE_PATTERN): Admit an optional argument.
